app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;

  --primary-white: #ffffff;
  --primary-black: #000000;
  --primary-color-100: #0068b5;
  --darken-primary-color: hsl(206, 100%, 22%);
  --primary-color-200: #ebfbff;
  --primary-color-300: #04c7fd;
  --primary-color-400: #009fb5;
  --primary-color-500: #4e4e4e;
  --primary-color-600: #0e00b5;
  --primary-color-700: #aeb4bc;
  --primary-color-800: #003964;

  --normal-color-100: #869aff;
  --normal-color-200: #1f37b3;

  --blue-color-100: #96d7ff;
  --lightblue-color-100: hsla(203, 100%, 79%, 0.4);
  --darkenblue-color-100: hsl(203, 36%, 48%);

  --yellow-color-100: #f6d86d;

  --green-color-100: #22bb33;

  --gray-color-100: #71738b;

  --normal-color-100: #869aff;
  --normal-color-200: #1f37b3;
}

body {
  font-family: var(--font-soleil) !important;
}

.prose :where(a):not(:where([class~="not-prose"] *)) {
  text-decoration: none;
  font-weight: normal;
}

html {
  scroll-behavior: smooth;
}

#content menu,
ol,
ul {
  list-style: normal;
}

/* Skeleton  */
.skeleton {
  background-color: #eee;
  background-image: linear-gradient(
    110deg,
    #ececec 8%,
    #f5f5f5 18%,
    #ececec 33%
  );
  border-radius: 5px;
  background-size: 200% 100%;
  animation: 1.5s shine linear infinite;
}

@keyframe shine {
  to {
    background-position-x: -200%;
  }
}

/*  */
.card-shadow {
  box-shadow: 0px 3px 6px 0px rgba(20, 21, 26, 0.08),
    0px 7px 14px 0px rgba(71, 77, 87, 0.08),
    0px 0px 1px 0px rgba(20, 21, 26, 0.1);
}

.crypto__list {
  display: grid;
  grid-template-areas:
    "h1 h1 h1 h2"
    "h3 h4 h4 h4"
    "h5 h5 h6 h6";
  gap: 16px;
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.crypto__h1 {
  grid-area: h1;
}

.crypto__h2 {
  grid-area: h2;
}

.crypto__h3 {
  grid-area: h3;
}

.crypto__h4 {
  grid-area: h4;
}
.crypto__h5 {
  grid-area: h5;
}

.crypto__h6 {
  grid-area: h6;
}

/* Fix text justify */
.text__spacing {
  text-align: justify;
  word-spacing: -2px;
}

.full-bleed {
  box-shadow: 0 0 0 100vmax #14151a;
  clip-path: inset(0 -100vmax);
}
.full-bleed__header {
  box-shadow: 0 0 0 100vmax #ebfbff;
  clip-path: inset(0 -100vmax);
}

.full-bleed__footer {
  box-shadow: 0 0 0 100vmax #f5f5f5;
  clip-path: inset(0 -100vmax);
}
.full-bleed__articleFilter {
  box-shadow: 0 0 0 100vmax #f5f5f5;
  clip-path: inset(0 -100vmax);
}
.full-bleed__footerArticle {
  box-shadow: 0 0 0 100vmax #1f37b3;
  clip-path: inset(0 -100vmax);
}
.full-bleed__learn {
  box-shadow: 0 0 0 100vmax #0b0e11;
  clip-path: inset(0 -100vmax);
}
/* Slider Double Range */
/* .double-range-slider {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.slider {
  width: 80%;
  margin: 0.5rem 0;
}

.slider-labels {
  display: flex;
  justify-content: space-between;
  width: 80%;
  font-size: 0.8rem;
  margin-top: 0.5rem;
} */

input[type="range"] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 80%;
  z-index: 10;
  outline: none;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  background-color: transparent;
  pointer-events: none;
}
.slider-track {
  width: 80%;
  height: 10px;
  position: absolute;
  margin: auto;
  top: 0;
  bottom: 0;
  border-radius: 5px;
}

input[type="range"]::-webkit-slider-runnable-track {
  -webkit-appearance: none;
  height: 10px;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 16px;
  width: 16px;
  background-color: #fff;
  cursor: pointer;
  margin-top: -3px;
  pointer-events: auto;
  border-radius: 50%;
  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

input[type="range"]::-webkit-slider-thumb:active {
  box-shadow: inset 0 0 3px #387bbe, 0 0 9px #000;
  -webkit-box-shadow: inset 0 0 3px #000, 0 0 9px #000;
}

/* Label Input Range */
.labels {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 1rem;
  width: 82%;
  transform: translateX(-3px);
}
.label-20m {
  transform: translateX(6px);
}
.label-30m {
  transform: translateX(10px);
}
.label-50m {
  transform: translateX(16px);
}
.label-40m {
  transform: translateX(13px);
}
.label-60m {
  transform: translateX(21px);
}
.label-1m,
.label-10m,
.label-20m,
.label-30m,
.label-40m,
.label-50m,
.label-60m {
  position: relative;
  font-size: 14px;
  color: #333;
  width: 20px;
  text-align: center;
  z-index: 1;
}

.label-10m::before,
.label-20m::before,
.label-30m::before,
.label-40m::before,
.label-50m::before,
.label-60m::before {
  content: "";
  position: absolute;
  bottom: 37px;
  left: 50%;
  transform: translateX(-50%);
  width: 2px;
  z-index: 1;
  height: 14px;
  background-color: #333;
}

.label-10m::before {
  left: 65%;
}
.label-20m::before,
.label-30m::before {
  left: 55%;
}

.label-40m::before,
.label-50m::before {
  left: 60%;
}
.label-60m::before {
  left: 55%;
}

/* Pagination */
.pagination .selected {
  @apply bg-white-300 rounded-[4px] py-2 px-4 inline-flex items-center justify-center;
}
/* ... */

